# distributed-function

./: .distributed-function.cabal.swp  .gitignore  README.md  distributed-function.cabal  remoteDown  remoteUp  slavesUp  stack.yaml
app/: Main.hs
examples/: SlowPrimes.hs
scripts/: remoteDown  remoteUp  slavesDown  slavesUp
src/Control/Distributed/Process/: SimpleMap.hs
test/: primes.txt  primes_1000000.txt  primes_10000000.txt  primes_100000000.txt  primes_1000000000.txt  primes_10000000000.txt  runTest
