name:                distributed-function
version:             0.1.0.0
synopsis:            Like a distributed `map` with zero configuration.
description:         Please see README.md
homepage:            https://github.com/josejuan/distributed-function
license:             BSD3
license-file:        LICENSE
author:              josejuan
maintainer:          jose-juan@computer-mind.com
copyright:           2016 josejuan
category:            Control
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Distributed.Process.SimpleMap
  build-depends:       base >= 4.7 && < 5
                     , distributed-process >= 0.5.5.1
                     , distributed-process-simplelocalnet >= 0.2.3.2
                     , binary >= 0.7.5.0
                     , network >= 2.6.2.1
  default-language:    Haskell2010

executable slow-primes-exe
  hs-source-dirs:      examples
  main-is:             SlowPrimes.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , distributed-function
  default-language:    Haskell2010

test-suite distributed-function-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , distributed-function
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/distributed-function
